<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_marginRight="@dimen/dimen_12"
    android:layout_marginBottom="@dimen/dimen_12">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/product_img"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:scaleType="centerInside"
            android:src="@drawable/illustration_login" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_product_name"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/black"
        android:maxLines="2"
        android:ellipsize="end"
        android:maxEms="15"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_img" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        tools:text="@string/dummy_price"
        android:textColor="@color/text_secondary_300"
        android:textSize="10sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:maxEms="15"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_product_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_checkout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_30"
        android:text="@string/checkout"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="@dimen/dimen_6"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="@dimen/dimen_3"
        app:layout_constraintTop_toBottomOf="@id/tv_price"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>