<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment"
        android:background="@color/primary_500">

        <LinearLayout
            android:id="@+id/wrap_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/dimen_40"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_24"
                android:layout_marginTop="@dimen/dimen_24">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_user"
                    android:layout_width="@dimen/dimen_60"
                    android:layout_height="@dimen/dimen_60"
                    android:src="@drawable/dummy_avatar"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="@dimen/dimen_1"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/img_user"
                    android:layout_marginStart="@dimen/dimen_12">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Hei, "
                            android:textSize="16sp"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:textColor="@color/white"
                            android:includeFontPadding="false"/>

                        <TextView
                            android:id="@+id/tv_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/example_name"
                            android:textSize="16sp"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:textColor="@color/white"
                            android:includeFontPadding="false"
                            android:layout_marginStart="@dimen/dimen_6"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Selamat datang!"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_regular" />

                </LinearLayout>

                <!--                <ImageView-->
                <!--                    android:id="@+id/ic_notifications"-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:src="@drawable/ic_notifications"-->
                <!--                    android:layout_centerVertical="true"-->
                <!--                    android:layout_toStartOf="@+id/ic_settings"-->
                <!--                    android:layout_marginEnd="@dimen/dimen_12"-->
                <!--                    app:tint="@color/white" />-->

                <ImageView
                    android:id="@+id/ic_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logout"
                    android:foreground="?android:attr/actionBarItemBackground"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    app:tint="@color/white" />

            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_24"
                android:layout_marginTop="@dimen/dimen_24"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/wrap_top_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/wrap_withdraw"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="@dimen/dimen_60"
                        android:layout_height="@dimen/dimen_60"
                        android:background="@drawable/bg_home_action"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dimen_30"
                            android:layout_height="@dimen/dimen_30"
                            android:src="@drawable/ic_add"
                            app:tint="@color/white" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_6"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:includeFontPadding="false"
                        android:text="Isi Saldo"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/wrap_withdraw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/wrap_top_up"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="@dimen/dimen_60"
                        android:layout_height="@dimen/dimen_60"
                        android:background="@drawable/bg_home_action"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dimen_30"
                            android:layout_height="@dimen/dimen_30"
                            android:src="@drawable/ic_camera"
                            app:tint="@color/white" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_6"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:includeFontPadding="false"
                        android:text="Scan QR"
                        android:textColor="@color/white" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/wrap_card_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_24"
            android:layout_marginHorizontal="@dimen/dimen_24"
            app:layout_constraintTop_toBottomOf="@+id/wrap_up">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_32">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical"
                    android:layout_centerVertical="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_balance"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:includeFontPadding="false"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/user_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/dummy_balance"
                        android:textSize="24sp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:includeFontPadding="false"
                        android:textColor="@color/primary_500"
                        android:layout_marginTop="@dimen/dimen_6"/>


                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/dimen_40"
                    android:layout_height="@dimen/dimen_40"
                    android:src="@drawable/ic_wallet"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    app:tint="@color/primary_500" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bottom"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dimen_60"
            android:paddingTop="@dimen/dimen_68"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/wrap_card_balance">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_24"
                android:layout_marginTop="@dimen/dimen_24"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:includeFontPadding="false"
                    android:text="@string/product"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/layout_product"
                    android:layout_marginTop="@dimen/dimen_12"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/app_bar"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>